--- a/deploy/deployment.yaml
+++ b/deploy/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: django
-          image: zakakriya/new_animal_kube:latest
+          image: zakakriya/animal_now:latest
           ports:
             - containerPort: 8000
           env:
